# rmxp-editor

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  database.rs  mod.rs  pbs.rs  playtest.rs  project.rs  scripts.rs
src-tauri/src/marshal/: types.rs
src-tauri/src/models/: event.rs  map.rs  mod.rs  system.rs  table.rs  tileset.rs
src/components/DatabaseEditor/: DatabaseContext.tsx  DatabaseEditor.css  DatabaseEditor.tsx  DatabaseListPanel.tsx  useDatabase.ts
src/components/EventEditor/: CharacterPicker.tsx  CommandParamEditor.tsx  EventCommandPicker.tsx  EventEditor.css  EventEditor.tsx  MoveRouteEditor.tsx
src/components/MapEditor/: MapEditor.css  MapEditor.tsx
src/components/MapProperties/: CreateMapDialog.tsx  MapPropertiesDialog.css  MapPropertiesDialog.tsx
src/components/MapTree/: MapTreePanel.css  MapTreePanel.tsx
src/components/PbsEditor/: PbsContext.tsx  PbsEditor.css  PbsEditor.tsx  PbsFieldEditor.tsx  PbsFieldRow.tsx  PbsFileTab.tsx  PbsSectionList.tsx  usePbsFile.ts
src/components/PbsEntityEditor/: PbsEntityContext.tsx  (+2 more)
src/context/: ProjectSaveContext.tsx
src/hooks/: useEntityEditor.ts  useUndoable.ts
src/services/: autotileData.ts  eventCommands.ts  imageLoader.ts  mapEditor.ts  mapRenderer.ts  pbsDistributor.ts  pbsIndex.ts  pbsMeta.ts  pbsUnified.ts  tauriApi.ts
src/types/: index.ts  pbsEntityTypes.ts  pbsTypes.ts  rpgTypes.ts
(+43 files in other folders)
